--- a/assets/main.scss
+++ b/assets/main.scss
@@ -844,10 +844,11 @@ pre {
 }
 
 .svg-icon {
-  width: 1.25em;
-  height: 1.25em;
+  width: 16px;
+  height: 16px;
   display: inline-block;
   fill: currentColor;
+  padding: 5px 3px 2px 5px;
   vertical-align: text-bottom;
 }
 
